fix: remove overflow

--- a/src/styles/_notification.scss
+++ b/src/styles/_notification.scss
@@ -1,6 +1,5 @@
 .r-notification {
     position: fixed;
-    overflow: hidden;
     z-index: 1000;
 }
 
